# recorder-zoom

./: .dockerignore  .gitignore  CHANGELOG.md  CONFIGURACION.md  Dockerfile  LICENSE  README.md  READMEv2.md  focus_recorder_preferences.json.example  main.py  pyproject.toml  recorder.py  requirements.txt
.github/workflows/: tests.yml
scripts/: build-dist.bat  build-dist.sh  setup.bat  setup.sh
src/focusrecorder/: __init__.py  __main__.py  main.py  recorder.py
src/focusrecorder/app/: __init__.py  config.py
src/focusrecorder/app/factories/: __init__.py  capture_backend_factory.py  mouse_provider_factory.py
src/focusrecorder/application/: __init__.py  dto.py  errors.py  recording_service.py
src/focusrecorder/application/use_cases/: prepare_recording.py  render_recording.py  stop_recording.py
src/focusrecorder/config/: config.py  constants.py  preferences.py  settings.py
src/focusrecorder/domain/: __init__.py  constants.py  preferences.py  settings.py
src/focusrecorder/domain/models/: recording_session.py
src/focusrecorder/domain/ports/: __init__.py  capture_backend.py
src/focusrecorder/infrastructure/: __init__.py
src/focusrecorder/infrastructure/audio/: sounddevice_audio.py
src/focusrecorder/infrastructure/capture/: dxcam_backend.py  mss_backend.py  windows_cursor.py
src/focusrecorder/infrastructure/encoding/: h264_encoder.py
src/focusrecorder/infrastructure/filesystem/: file_naming.py
src/focusrecorder/infrastructure/input/: null_mouse_provider.py  pynput_mouse_provider.py
src/focusrecorder/infrastructure/rendering/: adaptive_renderer.py
src/focusrecorder/infrastructure/system/: shell_paths.py
src/focusrecorder/presentation/ctk/: studio_window.py
src/focusrecorder/presentation/qt/: main_window.py  recording_presenter.py  render_thread.py  studio_window.py
src/focusrecorder/utils/: file_utils.py  system_paths.py  ui_conversions.py  video_utils.py
tests/: test_main_ui.py  test_main_ui_edges.py  test_recorder_loops.py  test_recorder_render.py  test_recorder_unit.py  test_render_thread.py  test_use_cases.py
