[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "focusrecorder"
version = "0.1.0"
description = "Screen recorder with focus tracking"
authors = [
    {name = "BarretoPalacios", email = "barreto@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=12.0.0",
    "PyQt6==6.7.1",
    "opencv-python==4.10.0.84",
    "numpy==2.1.3",
    "pyautogui==0.9.54",
    "pynput==1.8.1",
    "imageio-ffmpeg==0.5.1",
    "mss==9.0.2",
    "sounddevice>=0.4.6",
]

[project.scripts]
focusrecorder = "focusrecorder.main:run"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "pytest-qt>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=focusrecorder --cov-report=term-missing"

[tool.coverage.run]
source = ["src/focusrecorder"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.briefcase]
project_name = "Focus Recorder"
bundle = "com.barretopalacios"
version = "0.1.0"
author = "BarretoPalacios"
author_email = "barreto@example.com"
url = "https://github.com/BarretoPalacios/recorder-zoom"

[tool.briefcase.app.focusrecorder]
formal_name = "Focus Recorder"
description = "Screen recorder with focus tracking"
long_description = """Focus Recorder is a powerful screen recording application that automatically follows your cursor with dynamic zoom. Perfect for creating tutorials, demonstrations, and social media content.

Features:
- Smart camera movement that follows your cursor
- Configurable zoom level and smoothness
- Export to multiple formats (16:9 full screen, 9:16 vertical for TikTok)
- Adjustable FPS from 24 to 60
- Real-time recording with instant feedback
- Cross-platform support (Windows, Linux, macOS)
- Simple and intuitive interface built with PyQt6

Ideal for content creators, educators, and developers who need to create professional screen recordings with minimal effort."""
sources = ["src/focusrecorder"]
license.file = "LICENSE"
cleanup_paths = [
    "Dockerfile",
    "*.sh",
    "scripts/",
    "docs/",
    ".git/",
    ".gitignore",
    "requirements.txt",
]
requires = [
    "customtkinter>=5.2.2",
    "pillow>=12.0.0",
    "PyQt6==6.7.1",
    "opencv-python==4.10.0.84",
    "numpy==2.1.3",
    "pyautogui==0.9.54",
    "pynput==1.8.1",
    "imageio-ffmpeg==0.5.1",
    "mss==9.0.2",
    "sounddevice>=0.4.6",
]

[tool.briefcase.app.focusrecorder.windows]
requires = ["dxcam==0.3.0"]

[tool.briefcase.app.focusrecorder.linux]
system_requires = ["libgl1", "libglib2.0-0", "ffmpeg"]
